--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,136 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-white: #ffffff;
+  --color-black: #000000;
+  --color-gray: #434343;
+  --color-footer: #f6f6f6;
+  --color-border: #e6e9ea;
+  --color-input: #f1f5f6;
+  --color-paragraph: #434343;
+  --color-red: #f36d65;
+  --color-blue: #a0c2dd;
+  --color-purple: #cfc1d7;
+  --color-green: #b4bc8c;
+  --color-pink: #eea3a1;
+  --color-orange: #ecc7a1;
+  --color-light: #9d9d9d;
+
+  --container-width-lg: 80%;
+  --container-width-md: 95%;
+  --container-width-sm: 98%;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  background-color: var(--color-white);
+  color: var(--color-black);
+  position: relative;
+}
+
+input,
+a,
+button:focus {
+  outline: none;
+}
+
+/* motto */
+h1 {
+  font-size: 4.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%;
+}
+
+/* heading in home page */
+h2 {
+  font-size: 3.6rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+/* Info heading in home page */
+h3 {
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+/* logo */
+h4 {
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+}
+
+/* navbar right */
+h6 {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+p {
+  color: var(--color-gray);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 170%;
+}
+
+button {
+  background-color: var(--color-black);
+  color: var(--color-white);
+  border-radius: 0.1rem;
+  cursor: pointer;
+  border: none;
+  transition: var(--transition);
+  width: 10.6rem;
+  height: 3.6rem;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+button:hover {
+  border: 2px solid var(--color-black);
+  background-color: var(--color-white);
+  color: var(--color-black);
+}
+
+/* ${'' /* button {
+  background-color: var(--color-white);
+  width: max-content;
+  display: inline-block;
+  color: var(--color-text);
+  padding: 0.4rem 0.6rem;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  border: 1px solid var(--color-text);
+  transition: var(--transition);
+  font-size: 1.5rem;
+} */
